# Distributed-P2P-Cloud

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml  Personal.jpeg.encrypted  client_docs.md  middleware_docs.md
client/src/: client.rs  client_app.rs  client_gui.rs  client_gui_2.rs  decrypt_test.rs  middleware.rs  stress_test_client.rs
database/: main.py  schema.py  test.py
server/: Cargo.toml  database_urls.json  server_urls.json
server/server_storage/: Personal.jpeg.encrypted
server/src/: Cargo.toml  config.rs  directory_service.rs  encrypt_test.rs  metrics.rs  middleware.rs  server.rs
shared_images/: dog_1_metadata.json  dog_2_metadata.json  dog_3_metadata.json  input_metadata.json  low-res_metadata.json
