[package]
name = "project"
version = "0.1.0"
edition = "2024"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["blocking", "multipart", "json"] }

# Base64 and crypto
base64 = "0.22"
stegano-core = "0.6.0"
aes-gcm = "0.10"
bincode = "1.3"
image = "0.25"
hex = "0.4"
tempfile = "3"

# Async runtime and HTTP server
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random for gibberish encryption
rand = "0.8"

[[bin]]
name = "client_app"
path = "client/src/client_app.rs"

[[bin]]
name = "server"
path = "server/src/server.rs"
