[package]
name = "project"
version = "0.1.0"
edition = "2024"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.11", features = ["blocking", "multipart", "json", "rustls-tls"] }

# Steganography / Crypto / Encoding
aes-gcm = "0.10"
base64 = "0.22"
bincode = "1.3"
hex = "0.4"
stegano-core = "0.6.0"

# Files / temp / images
tempfile = "3"
image = "0.25"

# Async runtime + server
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random
rand = "0.8"

# System info
sysinfo = "0.30"

# GUI + utilities
eframe = { version = "0.22", default-features = true }
rfd = "0.9"
crossbeam-channel = "0.5"
winapi = { version = "0.3", features = ["winuser"] }

[[bin]]
name = "client_gui"
path = "client/src/client_gui.rs"

[[bin]]
name = "client_app"
path = "client/src/client_app.rs"

[[bin]]
name = "stress_test_client"
path = "client/src/stress_test_client.rs"

[[bin]]
name = "server"
path = "server/src/server.rs"
