[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "multipart", "json"] }
base64 = "0.22"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "middleware"
path = "src/bin/middleware.rs"