[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "multipart", "json", "rustls-tls"] }
aes-gcm = "0.10"
base64 = "0.21"
bincode = "1.3"
hex = "0.4"
tempfile = "3.6"
serde_yaml = "0.9"
tokio = { version = "1", optional = true }
eframe = { version = "0.22", default-features = true }
rfd = "0.9"
crossbeam-channel = "0.5"
winapi = { version = "0.3", features = ["winuser"] }
stegano-core = "0.6.0"

[[bin]]
name = "client_gui"
path = "src/client_gui.rs"
