[package]
name = "server"
version = "0.1.0"
edition = "2021"  # Note: 2024 is not valid, use 2021

[[bin]]
name = "server_m"
path = "src/bin/middleware.rs"

[dependencies]
stegano-core = "0.6.0"
aes-gcm = "0.10"
rand = "0.8"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

image = "0.25"
hex = "0.4"
show-image = "0.14"

tempfile = "3"
anyhow = "1.0"