[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server_m"
path = "src/bin/middleware.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server framework with multipart support
axum = { version = "0.7", features = ["multipart"] }

# HTTP utilities
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 encoding/decoding
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random for gibberish encryption
rand = "0.8"

# Existing dependencies
stegano-core = "0.6.0"
aes-gcm = "0.10"
bincode = "1.3"
image = "0.25"
hex = "0.4"
show-image = "0.14"
tempfile = "3"
anyhow = "1.0"